--- a/random.html
+++ b/random.html
@@ -60,7 +60,7 @@
               <img src="imgs/bike.JPG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">MaxKare Magnetic Exercise Bike w/LCD Monitor Tablet</h5>
-                <p class="card-text"><span>Info:</span>A stationary exercise bike. <br> <span>Condition:</span> Great. Used a dozen times this past winter.</p>
+                <p class="card-text"><span>Info:</span> A stationary exercise bike. <br> <span>Condition:</span> Great. Used a dozen times this past winter.</p>
               </div>
               <div class="card-footer d-flex justify-content-around">
                 <div> <span>Sale Price:</span> $150 </div>
@@ -113,7 +113,7 @@
         
         <div class="col mb-4">
             <div class="card h-100">
-              <img src="imgs/dumbbell.JPG" class="card-img-top" alt="...">
+              <img src="imgs/dumbell.JPG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title"> Rubber Coated Hex Dumbell</h5>
                 <p class="card-text"><span>Info:</span> 20lb dumbell -- single <br> <span>Condition:</span> Great. </p>
