--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="contactDiv">
-    <p>Currently, I am not interested in shipping hassles, so this is geared towards L.A.-based climbers. I reside very close to Cedars-Sinai, in West Hollywood.
+    <p>For most things, assuming you carry the extra costs (shipping & packaging), I am willing to ship. Otherwise, I reside very close to Cedars-Sinai, in West Hollywood.
     I can meet you near there, or Cliffs of Id when they reopen. </p>
 
     <p>My email is <a href="mailto:mountainsounds15@gmail.com">mountainsounds15@gmail.com.</a> I am happy to clarify or provide more info on the gear too. I will try to update it daily. </p>
