--- a/random.html
+++ b/random.html
@@ -166,7 +166,20 @@
               </div>
             </div>
           </div>
-
+        
+      <div class="col mb-4">
+            <div class="card h-100">
+              <img src="imgs/allCladPans.jpeg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sony XB32 Extra Bass</h5>
+                <p class="card-text"><span>Info:</span>Portable Bluetooth Speaker -- willing to ship. <br> <span>Condition:</span> Great <br> <span>Notes:</span> Used a dozen times over this past year. </p>
+              </div>
+              <div class="card-footer d-flex justify-content-around">
+                <div> <span>Sale Price:</span> $70 </div>
+                <div> <span>Retail Price:</span> $150 </div>
+              </div>
+            </div>
+          </div>
       </div>
       </div>
   </body>
