--- a/random.html
+++ b/random.html
@@ -169,7 +169,7 @@
         
       <div class="col mb-4">
             <div class="card h-100">
-              <img src="imgs/allCladPans.jpeg" class="card-img-top" alt="...">
+              <img src="imgs/speaker.JPG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Sony XB32 Extra Bass</h5>
                 <p class="card-text"><span>Info:</span>Portable Bluetooth Speaker -- willing to ship. <br> <span>Condition:</span> Great <br> <span>Notes:</span> Used a dozen times over this past year. </p>
