--- a/books.html
+++ b/books.html
@@ -103,7 +103,7 @@
       <td> $15 </td>
     </tr>
  
-    <tr>
+    <tr class="strikethrough">
       <td> Traditional Lead Climbing </td>
       <td> Heidi Pesterfield </td>
       <td> Good </td>
@@ -155,7 +155,7 @@
       <td> $10 </td>
       <td> $33 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> Alpine Mountaineering </td>
       <td> Bruce Goodlad </td>
       <td> Great </td>
@@ -169,7 +169,7 @@
       <td> $15 </td>
       <td> $29 </td>
     </tr>
-    <tr>
+    <tr class="strikethrough">
       <td> The Crack Climber's Technique Manual </td>
       <td> Kent Pease </td>
       <td> Good </td>
@@ -202,7 +202,7 @@
       <td> $17 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> K2: Triump & Tragedy </td>
       <td> Jim Curran </td>
       <td> Good </td>
@@ -210,7 +210,7 @@
       <td> $14 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> After The Wind: Tragedy on Everest: One Survivor's Story </td>
       <td> Lou Kasischke </td>
       <td> Great </td>
@@ -262,7 +262,7 @@
       <td> $35 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Bay Area Rock: Bouldering & Climbing </td>
       <td> Jim Thornburg </td>
       <td> Good </td>
@@ -270,7 +270,7 @@
       <td> $35 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Jackson Hole & Pinedale Wyoming (Rock Climbing) </td>
       <td> Wesley Gooch </td>
       <td> Great </td>
@@ -286,7 +286,7 @@
       <td> $27 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Utah's West Desert </td>
       <td> James Garrett </td>
       <td> Great </td>
