--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -42,8 +42,11 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 card-deck">
 
       <div class="col mb-4">
-       <div class="card h-100">
-          <img src="imgs/ropes.jpeg" class="card-img-top" alt="...">
+       <div class="card h-100" style="opacity: .2">
+          <img src="imgs/ropes.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Sterling: Nano Rope (70m) </h5>
             <p class="card-text"><span>Info:</span> Green, Dry XP, 9.0mm, middle mark. <br> <span>Condition:</span> Like new. <br> <span>Notes:</span> Has been used a few times, no falls. Purchased in 2019. </p>
@@ -55,9 +58,12 @@
         </div>
       </div>
 
-        <div class="col mb-4">
+        <div class="col mb-4" style="opacity: .2">
           <div class="card h-100">
-            <img src="imgs/flashboard.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/flashboard.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Tension: Flash Board</h5>
               <p class="card-text"><span>Info:</span> Portable hangboard. <br> <span>Condition:</span> Good/great <br> <span>Notes:</span> Used a couple of times at most. </p>
@@ -71,7 +77,7 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/sportivaShoes.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/sportivaShoes.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">La Sportiva: TX3 Approach Shoes</h5>
               <p class="card-text"><span>Info:</span> Mens, 13.5. <br> <span>Condition:</span> New. <br> <span>Notes:</span> Never worn. </p>
@@ -85,7 +91,7 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/ciero.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/ciero.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Arc Teryx: Cierzo Pack </h5>
               <p class="card-text"><span>Info:</span> Alpine summit or multi-pitch climbing pack. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Lightly used, missing the front compression strap thing.  </p>
@@ -99,7 +105,7 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/cam4.JPG" class="card-img-top" alt="...">
+            <img src="imgs/cam4.JPG" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
               <p class="card-text"><span>Info:</span> Gray, #4. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
@@ -112,8 +118,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/bdCams3.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style="opacity: .2">
+            <img src="imgs/bdCams3.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
               <p class="card-text"><span>Info:</span> Blue, #3. 1 left. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used around 10x or less.  </p>
@@ -126,8 +135,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/metoliousCams.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style:"opacity: .2">
+            <img src="imgs/metoliousCams.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Metolious: Ultralight Master Cam</h5>
               <p class="card-text"><span>Info:</span> Purple, size #0. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used around 10x or less. </p>
@@ -140,8 +152,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/metoliousCams.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style:"opacity: .2">
+            <img src="imgs/metoliousCams.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Metolious: Ultralight Master Cam</h5>
               <p class="card-text"><span>Info:</span> Gray, size #00. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used around 10x or less. </p>
@@ -154,8 +169,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/slings.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style:"opacity: .2">
+            <img src="imgs/slings.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: 10mm Dynex Sling</h5>
               <p class="card-text"><span>Info:</span> 60 cm, single-length runner. 2018. Selling 4. <br> <span>Condition:</span> Good.</p>
@@ -169,7 +187,7 @@
 
         <div class="col mb-4">
           <div class="card h-100">
-            <img src="imgs/atcGuide.jpeg" class="card-img-top" alt="...">
+            <img src="imgs/atcGuide.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Black Diamond: ATC Guide</h5>
               <p class="card-text"><span>Info:</span> Green. <br> <span>Condition:</span> Good.</p>
@@ -182,8 +200,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/mammutCrab.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style:"opacity: .2">
+            <img src="imgs/mammutCrab.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Mammut: Smart HMS Carabiner</h5>
               <p class="card-text"><span>Info:</span> Locking, anti-crossloading carabiner. <br> <span>Condition:</span> Great <br> <span>Notes:</span> Used a couple of times.  </p>
@@ -210,8 +231,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
-            <img src="imgs/bdGridlock.jpeg" class="card-img-top" alt="...">
+          <div class="card h-100" style:"opacity: .2">
+            <img src="imgs/bdGridlock.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Gridlock Carabiner</h5>
               <p class="card-text"><span>Info:</span> Screwgate, locking, anti-crossloading carabiner. <br> <span>Condition:</span> Great.</p>
