--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -135,7 +135,7 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style:"opacity: .2">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/metoliousCams.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
@@ -152,7 +152,7 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style:"opacity: .2">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/metoliousCams.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
@@ -169,7 +169,7 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style:"opacity: .2">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/slings.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
@@ -200,7 +200,7 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style:"opacity: .2">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/mammutCrab.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
@@ -231,7 +231,7 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100" style:"opacity: .2">
+          <div class="card h-100" style="opacity: .2">
             <img src="imgs/bdGridlock.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
