--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -43,7 +43,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/boots.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/boots.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">La Sportiva: Nepal Cube GTX </h5>
             <p class="card-text"><span>Info:</span> Mens, Size 47. <br> <span>Condition:</span> New. <br> <span>Notes:</span> Never been worn, still have tags.</p>
@@ -57,7 +57,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/screw13cm.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/screw13cm.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title"> Black Diamond: Ultralight Ice Screw </h5>
             <p class="card-text"><span>Info:</span> 13 cm, selling 6. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
@@ -71,7 +71,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/screw16cm.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/screw16cm.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Black Diamond: Ultralight Ice Screw</h5>
             <p class="card-text"><span>Info:</span> 16 cm, selling 3. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
@@ -85,7 +85,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/screw22cm.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/screw22cm.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Black Diamond: Ultralight Ice Screw</h5>
             <p class="card-text"><span>Info:</span> 22 cm. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x.</p>
@@ -98,8 +98,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/petzlLaser.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" opacity=".2">
+          <img src="imgs/petzlLaser.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Petzl: Laser Speed Ice Screw </h5>
             <p class="card-text"><span>Info:</span> 10 cm. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think it has ever been used. Maybe 1-2x. </p>
@@ -211,7 +214,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/highcamp.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/highcamp.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Outdoor Research: Highcamp Mitts</h5>
             <p class="card-text"><span>Info:</span> Mens, size medium. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Like new, maybe used a couple of times.</p>
@@ -224,8 +227,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/extravert.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" opacity=".2">
+          <img src="imgs/extravert.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Outdoor Research: Extravert Gloves</h5>
             <p class="card-text"><span>Info:</span> Men's, size medium. A great ice leading glove. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Like new, used a few times. </p>
@@ -239,7 +245,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/pl400.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/pl400.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: PL 400 Sensor Gloves</h5>
             <p class="card-text"><span>Info:</span> Men's, size large. Smartphone compatible. <br> <span>Condition:</span> Good. </p>
@@ -253,7 +259,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/atSL.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/atSL.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Phase SL Base Layer</h5>
             <p class="card-text"><span>Info:</span> Lightweight bottom base layer. <br> <span>Condition:</span> Great. </p>
@@ -267,7 +273,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/atAR.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/atAR.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Phase AR Base Layer </h5>
             <p class="card-text"><span>Info:</span> Moderate weight bottom base layer. <br> <span>Condition:</span> Great.</p>
@@ -281,7 +287,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/rockyMountain.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/rockyMountain.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: Rocky Mountain Low Gaiters </h5>
             <p class="card-text"><span>Info:</span> Large/XL size. <br> <span>Condition:</span> Good/great. </p>
@@ -295,7 +301,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/verglas.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/verglas.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: Verglas Gaiters </h5>
             <p class="card-text"><span>Info:</span> Small size. <br> <span>Condition:</span> Good/great.</p>
@@ -309,7 +315,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/crocodile.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/crocodile.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: Crocodile Gaiters</h5>
             <p class="card-text"><span>Info:</span> Men's, size large. <br> <span>Condition:</span> Good/Great.</p>
@@ -323,7 +329,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/socks.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/socks.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Smartwool: Ski/Alpine Socks</h5>
             <p class="card-text"><span>Info:</span> Ski & Mountaineering socks, size large. 3 pairs, black are of a thicker weight, blue is thinner. 1 of them is the Phd Pro-Mountaineer style. <br> <span>Condition:</span> Good/Great.</p>
@@ -337,7 +343,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/orHat.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/orHat.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: Wind Stopper Hat </h5>
             <p class="card-text"><span>Info:</span> Large size. <span>Condition:</span> Good. </p>
@@ -351,7 +357,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/balaclava.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/balaclava.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">OR: Thin Balaclava </h5>
             <p class="card-text"><span>Info:</span> large size. <br> <span>Condition:</span> Good. </p>
@@ -365,7 +371,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/atHardShell.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/atHardShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Alpha FL Jacket</h5>
             <p class="card-text"><span>Info:</span> Goretex Alpine Shell Jacket. Size large. <br> <span>Condition:</span> Good/great. </p>
@@ -379,7 +385,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/arcTeryxSoftShell.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/arcTeryxSoftShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Sigma SL Jacket</h5>
             <p class="card-text"><span>Info:</span> Alpine or multi-pitch rock, softshell jacket. Size large. <br> <span>Condition:</span> Good/great. </p>
@@ -393,7 +399,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/mammutSoftShell.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/mammutSoftShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mammut: Nordpfeiler  Jacket</h5>
             <p class="card-text"><span>Info:</span> Alpine/Ice Climbing softshell jacket. Size large. <br> <span>Condition:</span> Great.</p>
@@ -407,7 +413,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/mhSoftShell.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/mhSoftShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Softshell Pants </h5>
             <p class="card-text"><span>Info:</span> Alpine/Ice Climbing softshell pants. Size medium. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Couple of very small holes/tears; similar to their Chockstone Alpine Pant</p>
@@ -421,7 +427,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/mhHardShell.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/mhHardShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Shell Pants</h5>
             <p class="card-text"><span>Info:</span> Goretex Alpine/Ice Climbing Shell Pants. Size medium. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Similar to their Exposure/2 style.</p>
@@ -435,7 +441,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/skiHelmet.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/skiHelmet.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Giro: Jackson MIPS Ski Helmet</h5>
             <p class="card-text"><span>Info:</span> Adult, large ski helmet (2019). <br>  <span>Condition:</span> Great. <br> <span>Notes:</span> A few marks, otherwise in like new condition. Used 6x.</p>
@@ -449,7 +455,7 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/skiBoots.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/skiBoots.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Head: Edge LYT 100 Ski Boots</h5>
             <p class="card-text"><span>Info:</span> Black/Red color, size 28.5. <br>  <span>Condition:</span> Great. <br> <span>Notes:</span> Used 6x.</p>
