--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100" opacity=".2">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/petzlLaser.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
@@ -227,7 +227,7 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100" opacity=".2">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/extravert.jpeg" class="card-img-top">
             <div class="card-img-overlay">
               <h2 class="card-title" style="color:white">On hold/Sold</h5>
