--- a/books.html
+++ b/books.html
@@ -238,7 +238,7 @@
       <td> $45 </td>
     </tr>
     
-    <tr>
+    <tr class="strikethrough">
       <td> Climbing Boulder's Flatirons </td>
       <td> Jason Haas </td>
       <td> Good/Great </td>
@@ -278,7 +278,7 @@
       <td> $30 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Teton Rock Climbs </td>
       <td> Aaron Gams </td>
       <td> Great </td>
@@ -302,7 +302,7 @@
       <td> $20 </td>
     </tr>
 
-    <tr>
+    <tr class="strikethrough">
       <td> Mt. Hood Climber's Guide </td>
       <td> Bill Mullee </td>
       <td> Great </td>
