--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -200,10 +200,10 @@
 
       <div class="col mb-4">
         <div class="card h-100">
-          <img src="imgs/mhPuffy.jpeg" class="card-img-top" alt="...">
+          <img src="imgs/mhPuffy.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Phantom Puffy</h5>
-            <p class="card-text"><span>Info:</span> Hooded, down winter belay jacket. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> 1 small hole taped over (see photo), and 1 small darkish stain.</p>
+            <p class="card-text"><span>Info:</span> Hooded, down winter belay jacket. Size large. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> 1 small hole taped over (see photo), and 1 small darkish stain that may come out with the right know how.</p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $125</div>
@@ -262,7 +262,7 @@
           <img src="imgs/atSL.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Phase SL Base Layer</h5>
-            <p class="card-text"><span>Info:</span> Lightweight bottom base layer. <br> <span>Condition:</span> Great. </p>
+            <p class="card-text"><span>Info:</span> Lightweight bottom base layer. Size large. <br> <span>Condition:</span> Great. </p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $30</div>
@@ -276,7 +276,7 @@
           <img src="imgs/atAR.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Arc Teryx: Phase AR Base Layer </h5>
-            <p class="card-text"><span>Info:</span> Moderate weight bottom base layer. <br> <span>Condition:</span> Great.</p>
+            <p class="card-text"><span>Info:</span> Moderate weight bottom base layer. Size large.<br> <span>Condition:</span> Great.</p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $30</div>
@@ -416,7 +416,7 @@
           <img src="imgs/mhSoftShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Softshell Pants </h5>
-            <p class="card-text"><span>Info:</span> Alpine/Ice Climbing softshell pants. Size medium. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Couple of very small holes/tears; similar to their Chockstone Alpine Pant</p>
+            <p class="card-text"><span>Info:</span> Alpine/Ice Climbing softshell pants. Size medium. Inseam long. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Couple of very small holes/tears; similar to their Chockstone Alpine Pant</p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $50</div>
@@ -430,7 +430,7 @@
           <img src="imgs/mhHardShell.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Shell Pants</h5>
-            <p class="card-text"><span>Info:</span> Goretex Alpine/Ice Climbing Shell Pants. Size medium. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Similar to their Exposure/2 style.</p>
+            <p class="card-text"><span>Info:</span> Goretex Alpine/Ice Climbing Shell Pants. Size medium. Inseam long. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Similar to their Exposure/2 style.</p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $100</div>
