--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -412,8 +412,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/mhSoftShell.jpeg" class="card-img-top">
+           <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Softshell Pants </h5>
             <p class="card-text"><span>Info:</span> Alpine/Ice Climbing softshell pants. Size medium. Inseam long. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Couple of very small holes/tears; similar to their Chockstone Alpine Pant</p>
@@ -426,8 +429,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/mhHardShell.jpeg" class="card-img-top">
+           <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Shell Pants</h5>
             <p class="card-text"><span>Info:</span> Goretex Alpine/Ice Climbing Shell Pants. Size medium. Inseam long. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Similar to their Exposure/2 style.</p>
