--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -60,7 +60,7 @@
           <img src="imgs/screw13cm.jpeg" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title"> Black Diamond: Ultralight Ice Screw </h5>
-            <p class="card-text"><span>Info:</span> 13 cm, selling 6. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
+            <p class="card-text"><span>Info:</span> 13 cm, 4 left. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
           </div>
           <div class="card-footer d-flex justify-content-around">
             <div> <span>Sale Price:</span> $50/each</div>
@@ -84,8 +84,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/screw22cm.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Black Diamond: Ultralight Ice Screw</h5>
             <p class="card-text"><span>Info:</span> 22 cm. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x.</p>
@@ -129,8 +132,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/iceClipper.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" style="opacity:.2">
+          <img src="imgs/iceClipper.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Petzl: Caritool Evo Ice Clipper </h5>
             <p class="card-text"><span>Info:</span> Ice screw/tool clipper, 2 left. <br> <span>Condition:</span> New.</p>
