--- a/iceAlpineSki.html
+++ b/iceAlpineSki.html
@@ -56,8 +56,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/screw13cm.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title"> Black Diamond: Ultralight Ice Screw </h5>
             <p class="card-text"><span>Info:</span> 13 cm, 4 left. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
@@ -70,8 +73,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
+        <div class="card h-100" style="opacity:.2">
           <img src="imgs/screw16cm.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Black Diamond: Ultralight Ice Screw</h5>
             <p class="card-text"><span>Info:</span> 16 cm, selling 3. <br> <span>Condition:</span> New. <br> <span>Notes:</span> I don't think they have ever been used. Maybe 1-2x. </p>
@@ -163,8 +169,11 @@
       </div>
       
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/shovelProbe.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" style="opacity:.2">
+          <img src="imgs/shovelProbe.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Camp: Carbon Fiber Avy Probe</h5>
             <p class="card-text"><span>Info:</span> 240 cm, 133 grams. <br> <span>Condition:</span> New. </p>
@@ -177,8 +186,11 @@
       </div>
 
       <div class="col mb-4">
-        <div class="card h-100">
-          <img src="imgs/mhSleepingBag.jpeg" class="card-img-top" alt="...">
+        <div class="card h-100" style="opacity:.2">
+          <img src="imgs/mhSleepingBag.jpeg" class="card-img-top">
+          <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
           <div class="card-body">
             <h5 class="card-title">Mountain Hardwear: Phantom Bag </h5>
             <p class="card-text"><span>Info:</span> 0 degree sleeping bag. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Has 1 small hole taped over (see photo). Mostly used for van camping.</p>
