--- a/generalClimbing.html
+++ b/generalClimbing.html
@@ -90,8 +90,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity:.2">
             <img src="imgs/ciero.jpeg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Arc Teryx: Cierzo Pack </h5>
               <p class="card-text"><span>Info:</span> Alpine summit or multi-pitch climbing pack. <br> <span>Condition:</span> Good. <br> <span>Notes:</span> Lightly used, missing the front compression strap thing.  </p>
@@ -104,8 +107,11 @@
         </div>
 
         <div class="col mb-4">
-          <div class="card h-100">
+          <div class="card h-100" style="opacity:.2">
             <img src="imgs/cam4.JPG" class="card-img-top">
+            <div class="card-img-overlay">
+              <h2 class="card-title" style="color:white">On hold/Sold</h5>
+            </div>
             <div class="card-body">
               <h5 class="card-title">Black Diamond: Ultralight Cam</h5>
               <p class="card-text"><span>Info:</span> Gray, #4. <br> <span>Condition:</span> Great. <br> <span>Notes:</span> Used only a handful of times. </p>
